exercici2/Solució_proporcionada/condicional/calculadora_registres.output
Terminals unused in grammar

    UMES


Grammar

    0 $accept: calculadora $end

    1 calculadora: ε
    2            | calculadora sentencia

    3 sentencia: ';'
    4          | expr ';'
    5          | REG '=' expr ';'
    6          | '(' exp_lo ')' '?' aux1 sent_cond ':' aux2 sent_cond ';'
    7          | error ';'

    8 sent_cond: aux expr
    9          | aux REG '=' expr

   10 aux: ε

   11 aux1: ε

   12 aux2: ε

   13 expr: '(' expr ')'
   14     | expr '+' expr
   15     | expr '-' expr
   16     | expr '*' expr
   17     | expr '/' expr
   18     | expr '%' expr
   19     | '-' expr
   20     | '+' expr
   21     | expr DE expr
   22     | expr DD expr
   23     | '~' expr
   24     | expr '&' expr
   25     | expr '^' expr
   26     | expr '|' expr
   27     | REG
   28     | INT

   29 exp_lo: exp_lo AND exp_lo
   30       | exp_lo OR exp_lo
   31       | '!' exp_lo
   32       | '(' exp_lo ')'
   33       | expr '<' expr
   34       | expr '>' expr
   35       | expr MEI expr
   36       | expr MAI expr
   37       | expr IG expr
   38       | expr DIF expr


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 31
    '%' (37) 18
    '&' (38) 24
    '(' (40) 6 13 32
    ')' (41) 6 13 32
    '*' (42) 16
    '+' (43) 14 20
    '-' (45) 15 19
    '/' (47) 17
    ':' (58) 6
    ';' (59) 3 4 5 6 7
    '<' (60) 33
    '=' (61) 5 9
    '>' (62) 34
    '?' (63) 6
    '^' (94) 25
    '|' (124) 26
    '~' (126) 23
    error (256) 7
    REG <reg> (258) 5 9 27
    INT <valor> (259) 28
    OR (260) 30
    AND (261) 29
    IG (262) 37
    DIF (263) 38
    MEI (264) 35
    MAI (265) 36
    DE (266) 21
    DD (267) 22
    UMENYS (268)
    UMES (269)


Nonterminals, with rules where they appear

    $accept (33)
        on left: 0
    calculadora <sense> (34)
        on left: 1 2
        on right: 0 2
    sentencia <sense> (35)
        on left: 3 4 5 6 7
        on right: 2
    sent_cond <sense> (36)
        on left: 8 9
        on right: 6
    aux <logic> (37)
        on left: 10
        on right: 8 9
    aux1 <logic> (38)
        on left: 11
        on right: 6
    aux2 <logic> (39)
        on left: 12
        on right: 6
    expr <valor> (40)
        on left: 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28
        on right: 4 5 8 9 13 14 15 16 17 18 19 20 21 22 23 24 25 26 33 34 35 36 37 38
    exp_lo <logic> (41)
        on left: 29 30 31 32 33 34 35 36 37 38
        on right: 6 29 30 31 32


State 0

    0 $accept: • calculadora $end

    $default  reduce using rule 1 (calculadora)

    calculadora  go to state 1


State 1

    0 $accept: calculadora • $end
    2 calculadora: calculadora • sentencia

    $end   shift, and go to state 2
    error  shift, and go to state 3
    REG    shift, and go to state 4
    INT    shift, and go to state 5
    '~'    shift, and go to state 6
    '+'    shift, and go to state 7
    '-'    shift, and go to state 8
    ';'    shift, and go to state 9
    '('    shift, and go to state 10

    sentencia  go to state 11
    expr       go to state 12


State 2

    0 $accept: calculadora $end •

    $default  accept


State 3

    7 sentencia: error • ';'

    ';'  shift, and go to state 13


State 4

    5 sentencia: REG • '=' expr ';'
   27 expr: REG •

    '='  shift, and go to state 14

    $default  reduce using rule 27 (expr)


State 5

   28 expr: INT •

    $default  reduce using rule 28 (expr)


State 6

   23 expr: '~' • expr

    REG  shift, and go to state 15
    INT  shift, and go to state 5
    '~'  shift, and go to state 6
    '+'  shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 16

    expr  go to state 17


State 7

   20 expr: '+' • expr

    REG  shift, and go to state 15
    INT  shift, and go to state 5
    '~'  shift, and go to state 6
    '+'  shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 16

    expr  go to state 18


State 8

   19 expr: '-' • expr

    REG  shift, and go to state 15
    INT  shift, and go to state 5
    '~'  shift, and go to state 6
    '+'  shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 16

    expr  go to state 19


State 9

    3 sentencia: ';' •

    $default  reduce using rule 3 (sentencia)


State 10

    6 sentencia: '(' • exp_lo ')' '?' aux1 sent_cond ':' aux2 sent_cond ';'
   13 expr: '(' • expr ')'

    REG  shift, and go to state 15
    INT  shift, and go to state 5
    '!'  shift, and go to state 20
    '~'  shift, and go to state 6
    '+'  shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 21

    expr    go to state 22
    exp_lo  go to state 23


State 11

    2 calculadora: calculadora sentencia •

    $default  reduce using rule 2 (calculadora)


State 12

    4 sentencia: expr • ';'
   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '%' expr
   21     | expr • DE expr
   22     | expr • DD expr
   24     | expr • '&' expr
   25     | expr • '^' expr
   26     | expr • '|' expr

    '|'  shift, and go to state 24
    '^'  shift, and go to state 25
    '&'  shift, and go to state 26
    DE   shift, and go to state 27
    DD   shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '%'  shift, and go to state 33
    ';'  shift, and go to state 34


State 13

    7 sentencia: error ';' •

    $default  reduce using rule 7 (sentencia)


State 14

    5 sentencia: REG '=' • expr ';'

    REG  shift, and go to state 15
    INT  shift, and go to state 5
    '~'  shift, and go to state 6
    '+'  shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 16

    expr  go to state 35


State 15

   27 expr: REG •

    $default  reduce using rule 27 (expr)


State 16

   13 expr: '(' • expr ')'

    REG  shift, and go to state 15
    INT  shift, and go to state 5
    '~'  shift, and go to state 6
    '+'  shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 16

    expr  go to state 36


State 17

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '%' expr
   21     | expr • DE expr
   22     | expr • DD expr
   23     | '~' expr •
   24     | expr • '&' expr
   25     | expr • '^' expr
   26     | expr • '|' expr

    DE   shift, and go to state 27
    DD   shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '%'  shift, and go to state 33

    $default  reduce using rule 23 (expr)


State 18

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '%' expr
   20     | '+' expr •
   21     | expr • DE expr
   22     | expr • DD expr
   24     | expr • '&' expr
   25     | expr • '^' expr
   26     | expr • '|' expr

    $default  reduce using rule 20 (expr)


State 19

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '%' expr
   19     | '-' expr •
   21     | expr • DE expr
   22     | expr • DD expr
   24     | expr • '&' expr
   25     | expr • '^' expr
   26     | expr • '|' expr

    $default  reduce using rule 19 (expr)


State 20

   31 exp_lo: '!' • exp_lo

    REG  shift, and go to state 15
    INT  shift, and go to state 5
    '!'  shift, and go to state 20
    '~'  shift, and go to state 6
    '+'  shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 21

    expr    go to state 37
    exp_lo  go to state 38


State 21

   13 expr: '(' • expr ')'
   32 exp_lo: '(' • exp_lo ')'

    REG  shift, and go to state 15
    INT  shift, and go to state 5
    '!'  shift, and go to state 20
    '~'  shift, and go to state 6
    '+'  shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 21

    expr    go to state 22
    exp_lo  go to state 39


State 22

   13 expr: '(' expr • ')'
   14     | expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '%' expr
   21     | expr • DE expr
   22     | expr • DD expr
   24     | expr • '&' expr
   25     | expr • '^' expr
   26     | expr • '|' expr
   33 exp_lo: expr • '<' expr
   34       | expr • '>' expr
   35       | expr • MEI expr
   36       | expr • MAI expr
   37       | expr • IG expr
   38       | expr • DIF expr

    '|'  shift, and go to state 24
    '^'  shift, and go to state 25
    '&'  shift, and go to state 26
    IG   shift, and go to state 40
    DIF  shift, and go to state 41
    '<'  shift, and go to state 42
    '>'  shift, and go to state 43
    MEI  shift, and go to state 44
    MAI  shift, and go to state 45
    DE   shift, and go to state 27
    DD   shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '%'  shift, and go to state 33
    ')'  shift, and go to state 46


State 23

    6 sentencia: '(' exp_lo • ')' '?' aux1 sent_cond ':' aux2 sent_cond ';'
   29 exp_lo: exp_lo • AND exp_lo
   30       | exp_lo • OR exp_lo

    OR   shift, and go to state 47
    AND  shift, and go to state 48
    ')'  shift, and go to state 49


State 24

   26 expr: expr '|' • expr

    REG  shift, and go to state 15
    INT  shift, and go to state 5
    '~'  shift, and go to state 6
    '+'  shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 16

    expr  go to state 50


State 25

   25 expr: expr '^' • expr

    REG  shift, and go to state 15
    INT  shift, and go to state 5
    '~'  shift, and go to state 6
    '+'  shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 16

    expr  go to state 51


State 26

   24 expr: expr '&' • expr

    REG  shift, and go to state 15
    INT  shift, and go to state 5
    '~'  shift, and go to state 6
    '+'  shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 16

    expr  go to state 52


State 27

   21 expr: expr DE • expr

    REG  shift, and go to state 15
    INT  shift, and go to state 5
    '~'  shift, and go to state 6
    '+'  shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 16

    expr  go to state 53


State 28

   22 expr: expr DD • expr

    REG  shift, and go to state 15
    INT  shift, and go to state 5
    '~'  shift, and go to state 6
    '+'  shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 16

    expr  go to state 54


State 29

   14 expr: expr '+' • expr

    REG  shift, and go to state 15
    INT  shift, and go to state 5
    '~'  shift, and go to state 6
    '+'  shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 16

    expr  go to state 55


State 30

   15 expr: expr '-' • expr

    REG  shift, and go to state 15
    INT  shift, and go to state 5
    '~'  shift, and go to state 6
    '+'  shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 16

    expr  go to state 56


State 31

   16 expr: expr '*' • expr

    REG  shift, and go to state 15
    INT  shift, and go to state 5
    '~'  shift, and go to state 6
    '+'  shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 16

    expr  go to state 57


State 32

   17 expr: expr '/' • expr

    REG  shift, and go to state 15
    INT  shift, and go to state 5
    '~'  shift, and go to state 6
    '+'  shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 16

    expr  go to state 58


State 33

   18 expr: expr '%' • expr

    REG  shift, and go to state 15
    INT  shift, and go to state 5
    '~'  shift, and go to state 6
    '+'  shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 16

    expr  go to state 59


State 34

    4 sentencia: expr ';' •

    $default  reduce using rule 4 (sentencia)


State 35

    5 sentencia: REG '=' expr • ';'
   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '%' expr
   21     | expr • DE expr
   22     | expr • DD expr
   24     | expr • '&' expr
   25     | expr • '^' expr
   26     | expr • '|' expr

    '|'  shift, and go to state 24
    '^'  shift, and go to state 25
    '&'  shift, and go to state 26
    DE   shift, and go to state 27
    DD   shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '%'  shift, and go to state 33
    ';'  shift, and go to state 60


State 36

   13 expr: '(' expr • ')'
   14     | expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '%' expr
   21     | expr • DE expr
   22     | expr • DD expr
   24     | expr • '&' expr
   25     | expr • '^' expr
   26     | expr • '|' expr

    '|'  shift, and go to state 24
    '^'  shift, and go to state 25
    '&'  shift, and go to state 26
    DE   shift, and go to state 27
    DD   shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '%'  shift, and go to state 33
    ')'  shift, and go to state 46


State 37

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '%' expr
   21     | expr • DE expr
   22     | expr • DD expr
   24     | expr • '&' expr
   25     | expr • '^' expr
   26     | expr • '|' expr
   33 exp_lo: expr • '<' expr
   34       | expr • '>' expr
   35       | expr • MEI expr
   36       | expr • MAI expr
   37       | expr • IG expr
   38       | expr • DIF expr

    '|'  shift, and go to state 24
    '^'  shift, and go to state 25
    '&'  shift, and go to state 26
    IG   shift, and go to state 40
    DIF  shift, and go to state 41
    '<'  shift, and go to state 42
    '>'  shift, and go to state 43
    MEI  shift, and go to state 44
    MAI  shift, and go to state 45
    DE   shift, and go to state 27
    DD   shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '%'  shift, and go to state 33


State 38

   29 exp_lo: exp_lo • AND exp_lo
   30       | exp_lo • OR exp_lo
   31       | '!' exp_lo •

    $default  reduce using rule 31 (exp_lo)


State 39

   29 exp_lo: exp_lo • AND exp_lo
   30       | exp_lo • OR exp_lo
   32       | '(' exp_lo • ')'

    OR   shift, and go to state 47
    AND  shift, and go to state 48
    ')'  shift, and go to state 61


State 40

   37 exp_lo: expr IG • expr

    REG  shift, and go to state 15
    INT  shift, and go to state 5
    '~'  shift, and go to state 6
    '+'  shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 16

    expr  go to state 62


State 41

   38 exp_lo: expr DIF • expr

    REG  shift, and go to state 15
    INT  shift, and go to state 5
    '~'  shift, and go to state 6
    '+'  shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 16

    expr  go to state 63


State 42

   33 exp_lo: expr '<' • expr

    REG  shift, and go to state 15
    INT  shift, and go to state 5
    '~'  shift, and go to state 6
    '+'  shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 16

    expr  go to state 64


State 43

   34 exp_lo: expr '>' • expr

    REG  shift, and go to state 15
    INT  shift, and go to state 5
    '~'  shift, and go to state 6
    '+'  shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 16

    expr  go to state 65


State 44

   35 exp_lo: expr MEI • expr

    REG  shift, and go to state 15
    INT  shift, and go to state 5
    '~'  shift, and go to state 6
    '+'  shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 16

    expr  go to state 66


State 45

   36 exp_lo: expr MAI • expr

    REG  shift, and go to state 15
    INT  shift, and go to state 5
    '~'  shift, and go to state 6
    '+'  shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 16

    expr  go to state 67


State 46

   13 expr: '(' expr ')' •

    $default  reduce using rule 13 (expr)


State 47

   30 exp_lo: exp_lo OR • exp_lo

    REG  shift, and go to state 15
    INT  shift, and go to state 5
    '!'  shift, and go to state 20
    '~'  shift, and go to state 6
    '+'  shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 21

    expr    go to state 37
    exp_lo  go to state 68


State 48

   29 exp_lo: exp_lo AND • exp_lo

    REG  shift, and go to state 15
    INT  shift, and go to state 5
    '!'  shift, and go to state 20
    '~'  shift, and go to state 6
    '+'  shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 21

    expr    go to state 37
    exp_lo  go to state 69


State 49

    6 sentencia: '(' exp_lo ')' • '?' aux1 sent_cond ':' aux2 sent_cond ';'

    '?'  shift, and go to state 70


State 50

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '%' expr
   21     | expr • DE expr
   22     | expr • DD expr
   24     | expr • '&' expr
   25     | expr • '^' expr
   26     | expr • '|' expr
   26     | expr '|' expr •

    '^'  shift, and go to state 25
    '&'  shift, and go to state 26
    DE   shift, and go to state 27
    DD   shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '%'  shift, and go to state 33

    $default  reduce using rule 26 (expr)


State 51

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '%' expr
   21     | expr • DE expr
   22     | expr • DD expr
   24     | expr • '&' expr
   25     | expr • '^' expr
   25     | expr '^' expr •
   26     | expr • '|' expr

    '&'  shift, and go to state 26
    DE   shift, and go to state 27
    DD   shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '%'  shift, and go to state 33

    $default  reduce using rule 25 (expr)


State 52

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '%' expr
   21     | expr • DE expr
   22     | expr • DD expr
   24     | expr • '&' expr
   24     | expr '&' expr •
   25     | expr • '^' expr
   26     | expr • '|' expr

    DE   shift, and go to state 27
    DD   shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '%'  shift, and go to state 33

    $default  reduce using rule 24 (expr)


State 53

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '%' expr
   21     | expr • DE expr
   21     | expr DE expr •
   22     | expr • DD expr
   24     | expr • '&' expr
   25     | expr • '^' expr
   26     | expr • '|' expr

    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '%'  shift, and go to state 33

    $default  reduce using rule 21 (expr)


State 54

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '%' expr
   21     | expr • DE expr
   22     | expr • DD expr
   22     | expr DD expr •
   24     | expr • '&' expr
   25     | expr • '^' expr
   26     | expr • '|' expr

    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '%'  shift, and go to state 33

    $default  reduce using rule 22 (expr)


State 55

   14 expr: expr • '+' expr
   14     | expr '+' expr •
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '%' expr
   21     | expr • DE expr
   22     | expr • DD expr
   24     | expr • '&' expr
   25     | expr • '^' expr
   26     | expr • '|' expr

    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '%'  shift, and go to state 33

    $default  reduce using rule 14 (expr)


State 56

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   15     | expr '-' expr •
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '%' expr
   21     | expr • DE expr
   22     | expr • DD expr
   24     | expr • '&' expr
   25     | expr • '^' expr
   26     | expr • '|' expr

    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '%'  shift, and go to state 33

    $default  reduce using rule 15 (expr)


State 57

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   16     | expr '*' expr •
   17     | expr • '/' expr
   18     | expr • '%' expr
   21     | expr • DE expr
   22     | expr • DD expr
   24     | expr • '&' expr
   25     | expr • '^' expr
   26     | expr • '|' expr

    $default  reduce using rule 16 (expr)


State 58

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   17     | expr '/' expr •
   18     | expr • '%' expr
   21     | expr • DE expr
   22     | expr • DD expr
   24     | expr • '&' expr
   25     | expr • '^' expr
   26     | expr • '|' expr

    $default  reduce using rule 17 (expr)


State 59

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '%' expr
   18     | expr '%' expr •
   21     | expr • DE expr
   22     | expr • DD expr
   24     | expr • '&' expr
   25     | expr • '^' expr
   26     | expr • '|' expr

    $default  reduce using rule 18 (expr)


State 60

    5 sentencia: REG '=' expr ';' •

    $default  reduce using rule 5 (sentencia)


State 61

   32 exp_lo: '(' exp_lo ')' •

    $default  reduce using rule 32 (exp_lo)


State 62

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '%' expr
   21     | expr • DE expr
   22     | expr • DD expr
   24     | expr • '&' expr
   25     | expr • '^' expr
   26     | expr • '|' expr
   37 exp_lo: expr IG expr •

    '|'  shift, and go to state 24
    '^'  shift, and go to state 25
    '&'  shift, and go to state 26
    DE   shift, and go to state 27
    DD   shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '%'  shift, and go to state 33

    $default  reduce using rule 37 (exp_lo)


State 63

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '%' expr
   21     | expr • DE expr
   22     | expr • DD expr
   24     | expr • '&' expr
   25     | expr • '^' expr
   26     | expr • '|' expr
   38 exp_lo: expr DIF expr •

    '|'  shift, and go to state 24
    '^'  shift, and go to state 25
    '&'  shift, and go to state 26
    DE   shift, and go to state 27
    DD   shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '%'  shift, and go to state 33

    $default  reduce using rule 38 (exp_lo)


State 64

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '%' expr
   21     | expr • DE expr
   22     | expr • DD expr
   24     | expr • '&' expr
   25     | expr • '^' expr
   26     | expr • '|' expr
   33 exp_lo: expr '<' expr •

    '|'  shift, and go to state 24
    '^'  shift, and go to state 25
    '&'  shift, and go to state 26
    DE   shift, and go to state 27
    DD   shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '%'  shift, and go to state 33

    $default  reduce using rule 33 (exp_lo)


State 65

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '%' expr
   21     | expr • DE expr
   22     | expr • DD expr
   24     | expr • '&' expr
   25     | expr • '^' expr
   26     | expr • '|' expr
   34 exp_lo: expr '>' expr •

    '|'  shift, and go to state 24
    '^'  shift, and go to state 25
    '&'  shift, and go to state 26
    DE   shift, and go to state 27
    DD   shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '%'  shift, and go to state 33

    $default  reduce using rule 34 (exp_lo)


State 66

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '%' expr
   21     | expr • DE expr
   22     | expr • DD expr
   24     | expr • '&' expr
   25     | expr • '^' expr
   26     | expr • '|' expr
   35 exp_lo: expr MEI expr •

    '|'  shift, and go to state 24
    '^'  shift, and go to state 25
    '&'  shift, and go to state 26
    DE   shift, and go to state 27
    DD   shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '%'  shift, and go to state 33

    $default  reduce using rule 35 (exp_lo)


State 67

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '%' expr
   21     | expr • DE expr
   22     | expr • DD expr
   24     | expr • '&' expr
   25     | expr • '^' expr
   26     | expr • '|' expr
   36 exp_lo: expr MAI expr •

    '|'  shift, and go to state 24
    '^'  shift, and go to state 25
    '&'  shift, and go to state 26
    DE   shift, and go to state 27
    DD   shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '%'  shift, and go to state 33

    $default  reduce using rule 36 (exp_lo)


State 68

   29 exp_lo: exp_lo • AND exp_lo
   30       | exp_lo • OR exp_lo
   30       | exp_lo OR exp_lo •

    AND  shift, and go to state 48

    $default  reduce using rule 30 (exp_lo)


State 69

   29 exp_lo: exp_lo • AND exp_lo
   29       | exp_lo AND exp_lo •
   30       | exp_lo • OR exp_lo

    $default  reduce using rule 29 (exp_lo)


State 70

    6 sentencia: '(' exp_lo ')' '?' • aux1 sent_cond ':' aux2 sent_cond ';'

    $default  reduce using rule 11 (aux1)

    aux1  go to state 71


State 71

    6 sentencia: '(' exp_lo ')' '?' aux1 • sent_cond ':' aux2 sent_cond ';'

    $default  reduce using rule 10 (aux)

    sent_cond  go to state 72
    aux        go to state 73


State 72

    6 sentencia: '(' exp_lo ')' '?' aux1 sent_cond • ':' aux2 sent_cond ';'

    ':'  shift, and go to state 74


State 73

    8 sent_cond: aux • expr
    9          | aux • REG '=' expr
